HTML web page for exercise

--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -9,8 +9,15 @@
   </head>
   <body>
     <!-- h1 goes here -->
+     <h1>Why I Love Web Development</h1>
     <!-- ol goes here -->
+     <ol><li>It is challenging</li>
+      <li>I am learning new things</li>
+      <li>It is fun to create web pages</li>
+     </ol>
     <!-- a goes here -->
-    <!-- p goes here -->
+     <a href = "https://education.launchcode.org/intro-to-web-dev-curriculum/html/exercises/index.html" target="_blank">HTML Exercise Page</a>
+     <!-- p goes here -->
+      <p>This website will list the reasons why I love web development to encourage you to try something new and challenge yourself. Also, I have added a link to a page to help you practice HTML exercises like I did here on this page.</p>
   </body>
 </html>
