--- a/user-input-with-forms/studio/index.html
+++ b/user-input-with-forms/studio/index.html
@@ -3,17 +3,34 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
-    });
+		function setSearchEngine() {
+
+			let actions = {
+				"google": "https://www.google.com/search",
+				"duckDuckGo": "https://duckduckgo.com/",
+				"bing": "https://www.bing.com/search",
+				"ask": "https://www.ask.com/web"
+			}
+			let userInput = document.querySelector("input[name=engine]:checked");
+			let action = actions[userInput.value];
+			form.setAttribute('action', action);
+		}
+		window.addEventListener("load", function () {
+			let form = document.getElementById("searchForm");
+			form.addEventListener("submit", setSearchEngine());
+		});
 	</script>
 </head>
 
 <body>
-
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
+		<!-- TODO: add form elements -->
+		<input type="text" name="q" />
+		<label>Google<input type="radio" name="engine" value="google"></label>
+		<label>DuckDuckGo<input type="radio" name="engine" value="duckDuckGo"></label>
+		<label>Bing<input type="radio" name="engine" value="bing"></label>
+		<label>Ask<input type="radio" name="engine" value="ask"></label>
+		<button>Go!</button>
 	</form>
 
 </body>
